<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="reports_fragment_label">Reports Fragment</string>
    <string name="meals_report_fragment_label">Meals Report Fragment</string>
    <string name="restaurant_service_label">Restaurant Service Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- My Strings -->
    <string name="home">Home</string>
    <string name="reports">Reports</string>
    <string name="toolbar_text">Hello Wangsadinata!</string>
    <string name="redeem_meal_coupon">Redeem Passenger Meal Coupon</string>
    <string name="or">OR</string>
    <string name="services_at_restaurant">1 service at the restaurant now</string>
    <string name="upcoming_services">3 upcoming services</string>
    <string name="coupon_details">Coupon Details</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="enter_coupon_code_from_customer">Enter coupon code from customer</string>
    <string name="cancel">Cancel</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="coupon_verified">Coupon Verified</string>
    <string name="passenger_name">Passenger Name</string>
    <string name="mohammed_isya">Mohammed Isya</string>
    <string name="service_name">Service name</string>
    <string name="bht114">BHT114</string>
    <string name="seat_no">Seat No.</string>
    <string name="c12">C12</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="freemeal">FREEMEAL10</string>
    <string name="redeem_coupon">Redeem Coupon</string>
    <string name="coupon_not_verified">Coupon not verified</string>
    <string name="not_valid_meal_coupon">This is not a valid meal coupon.</string>
    <string name="coupon_already_avalied">This coupon is already availed</string>
    <string name="close">Close</string>
    <string name="scan_qr_code">Scan QR Code to verify</string>
    <string name="enter_coupon_code_instead">Enter coupon code instead</string>
    <string name="error">Error</string>
    <string name="issue_with_qr_code">There is some issue with the QR code scanner.</string>
    <string name="manually_enter_coupon_code">Please manually enter the coupon code to redeem</string>
    <string name="redeem_message">Coupon FREEMEAL10 for Seat No. C12 in service BHT114 has been redeemed.</string>
    <string name="generate_your_report">Generate Your Report</string>
    <string name="select_service">Select Service</string>
    <string name="all_services">All Services</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_name_tv">Meghana</string>
    <string name="from_date_label">From Date</string>
    <string name="from_date_value">26-02-2024</string>
    <string name="to_date_label">To Date</string>
    <string name="to_date_value">28-02-2024</string>
    <string name="view_report">View Report</string>
    <string name="download_report">Download Report</string>
    <string name="meals_report">Meals Report</string>
    <string name="meals_report_dates">26-02-2024 to 28-02-2024</string>
    <string name="your_summary">Your Summary</string>
    <string name="coupons_redeemed">Coupons redeemed</string>
    <string name="no_of_coupons">149</string>
    <string name="net_revenue">Net revenue</string>
    <string name="net_revenue_amount">Rp 500.000</string>
    <string name="view_more">View more</string>
    <string name="view_less">View less</string>
    <string name="total_services">Total services</string>
    <string name="no_of_services">29</string>
    <string name="total_passengers">Total passengers visited</string>
    <string name="no_of_passengers">378</string>
    <string name="earning_per_bus">Earning per bus</string>
    <string name="earn_amount">Rp 5000</string>
    <string name="date">Date</string>
    <string name="meal_report_date">28-02-2024</string>
    <string name="time_and_service">06:30 • BHT124</string>
    <string name="route">Johar Bahru to Surabaya</string>
    <string name="coupon">CXTPM1W1</string>
    <string name="coupon_amount">Rp15.000</string>
    <string name="colon">:</string>
    <string name="empty_coupon_code_msg">Please enter coupon code</string>
    <string name="server_error">Server Error</string>
    <string name="scan_barcode">Scan a barcode</string>
    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>
    <string name="version">Version</string>
    <string name="hello">Hello</string>
    <string name="search">Search</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="select_restaurant">Select Restaurant</string>
    <string name="no_data_available">No data available</string>
    <string name="date_compare">From Date should be less than To Date</string>
    <string name="selectFromDateFirst">Please select From Date first</string>
    <string name="downloaded">Downloaded Successfully</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="pdfurl_error">PDF url is not present</string>
    <string name="network_not_available">Network Not Available</string>
    <string name="restaurant_not_selected">Please select a restaurant</string>
    <string name="logout_successful">Logout Successful</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="notAvailable">N/A</string>
    <string name="okay">Okay</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="please_try_again">Please try again</string>
    <string name="scanner_msg">Scan QR Code to verify</string>
    <string name="share_report_msg">Download you report here</string>
    <string name="no_coupons_found_msg">No meal coupons found for given date range</string>
    <string name="to_date_required_msg">Please Select To Date</string>
    <string name="please_select_to_date">Please select To Date</string>
    <string name="all_restaurants">All Restaurants</string>


</resources>