<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_verified"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            style="@style/textStyleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/coupon_verified"
            android:textColor="@color/black_shade_2"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/imageView"
            app:layout_constraintStart_toEndOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/white_shade_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_line">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/coupon_verified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_coupon_verified"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coupon_verified">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/textStyleNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passenger_name"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPassengerName"
                style="@style/textStyleNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mohammed_isya"
                android:textColor="@color/grey_shade_1"
                android:textFontWeight="600"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/textStyleNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/service_name"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvServiceName"
                style="@style/textStyleNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bht114"
                android:textColor="@color/grey_shade_1"
                android:textFontWeight="600"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/textStyleNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/seat_no"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSeatNumber"
                style="@style/textStyleNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c12"
                android:textColor="@color/grey_shade_1"
                android:textFontWeight="600"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/textStyleNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/coupon_code"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCouponCode"
                style="@style/textStyleNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/freemeal"
                android:textColor="@color/grey_shade_1"
                android:textFontWeight="600"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/redeem_coupon_btn"
            style="@style/textStyleBold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/apply_coupon_btn_background"
            android:text="@string/redeem_coupon"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearlayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>