<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_shade_bg"
    android:padding="16dp"
    android:fillViewport="true"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">




        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            style="@style/textStyleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate_your_report"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/service_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/generate_report_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView1"
                style="@style/textStyleNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select_service"
                android:textColor="@color/grey"
                android:textFontWeight="600"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/select_service"
                style="@style/textStyleNormal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/reports_inputs_background"
                android:drawableEnd="@drawable/ic_drop_down"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textNoSuggestions"
                android:text="@string/all_services"
                android:textAllCaps="false"
                android:textColor="@color/grey_shade_3"
                android:textFontWeight="400"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView4"
                style="@style/textStyleNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/restaurant_name"
                android:textColor="@color/grey"
                android:textFontWeight="600"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/select_service" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/select_restaurant"
                style="@style/textStyleNormal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/reports_inputs_background"
                android:drawableEnd="@drawable/ic_drop_down"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/select_restaurant"
                android:inputType="textNoSuggestions"
                android:textColor="@color/grey_shade_3"
                android:textFontWeight="400"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView4" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView2"
                style="@style/textStyleNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/from_date_label"
                android:textColor="@color/grey"
                android:textFontWeight="600"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/select_restaurant" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fromDate"
                style="@style/textStyleNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/reports_inputs_background"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_calendar"
                android:focusable="true"
                android:inputType="none"
                android:text="@string/from_date_value"
                android:textColor="@color/grey_shade_3"
                android:textFontWeight="400"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView3"
                style="@style/textStyleNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/to_date_label"
                android:textColor="@color/grey"
                android:textFontWeight="600"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fromDate" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toDate"
                style="@style/textStyleNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/reports_inputs_background"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_calendar"
                android:focusable="true"
                android:inputType="none"
                android:text="@string/to_date_value"
                android:textColor="@color/grey_shade_3"
                android:textFontWeight="400"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/view_report_btn"
            style="@style/textStyleBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/apply_coupon_btn_background"
            android:text="@string/view_report"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/service_layout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/download_report_btn"
            style="@style/textStyleBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/cancel_btn_background"
            android:text="@string/download_report"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_report_btn" />


        <ProgressBar
            android:id="@+id/progress_bar_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>